@@ -45,7 +45,7 @@ public class B3 implements EvaluatePP {
 
 
     public T (Long p1, String p2) {
-      i = new Integer(p1.intValue());
+      i = Integer.valueOf(p1.intValue());
       j = p2;
       System.out.println(p2);
     }
@@ -108,7 +108,7 @@ public class B3 implements EvaluatePP {
 
 // ***** VDMTOOLS START Name=evaluatePP KEEP=NO
   public Boolean evaluatePP (int fnr) throws CGException{
-    return new Boolean(true);
+    return Boolean.TRUE;
   }
 // ***** VDMTOOLS END Name=evaluatePP
 
